--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "require": {
         "php": ">=7.3.0",
-        "neos/neos": "^4.3",
-        "neos/neos-ui": "^4.0",
+        "neos/neos": "^4.3|^5.0",
+        "neos/neos-ui": "^4.0|^5.0",
         "twig/twig": "^3.0",
         "flammel/zweig": "@dev"
     },
