--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -4,3 +4,8 @@ Flammel:
     functions:
       node: [Flammel\Fission\Functions\Node, '__invoke']
       fission: [Flammel\Fission\Functions\Fission, '__invoke']
+Neos:
+  Neos:
+    fusion:
+      autoInclude:
+        Flammel.Fission: true
